--- a/wp-content/themes/customtheme/css/custom.css
+++ b/wp-content/themes/customtheme/css/custom.css
@@ -11,9 +11,15 @@
 
 .blog-element a { color: #fff; text-shadow: 0 1px 3px rgba(0,0,0,.5); }
 
-.second-row-padding { padding-right: 0px; }
-.second-row-padding { padding-left: 0px; }
+
+.first-row-padding { padding-right: 0px; }
+
+
+.second-row-padding:nth-child(1n) { padding-right: 0px; }
+.second-row-padding:nth-child(2n) { padding-left: 0px;  }
 
 .third-row-padding { padding: 0; }
-.third-row-padding:nth-child(4) { padding-left: 15px; }
-.third-row-padding:last-child { padding-right: 15px; }
+
+.third-row-padding:first-child { padding-left: 15px; }
+.third-row-padding:nth-child(4n) { padding-left: 15px; }
+.third-row-padding:last-child { padding-right: 0px; }
